prusti/tests/pass/parse/false.stderr
Verification of 3 items...
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/false.rs:10:11
   |
10 | #[ensures(false)]
   |           ^^^^^
   |
note: the error originates here
  --> $DIR/false.rs:11:1
   |
11 | fn test1() {}
   | ^^^^^^^^^^^^^

error: [Prusti: verification error] statement might panic
  --> $DIR/false.rs:14:5
   |
14 |     assert!(false);
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

Verification failed
error: aborting due to 2 previous errors

